opLT ROC cosh sinh

--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -94,10 +94,10 @@ Let $\opLT\brs{\fg(x)}$ be the \ope{Laplace Transform} \xref{def:opLT} of a func
 Let the \structe{Region of Convergence} of $\opLT[\fg(x)](s)$
 be $A\leq\Real(s)\leq B$ with $\opair{A}{B}\in\R^2$.
 \thmbox{\begin{array}{>{\ds}lc>{\ds}r Dl@{\hspace{2pt}}l CD}
-    \mc{3}{H}{Mapping}                                                   & \mc{3}{|H}{Region of Convergence}                   & \mc{1}{|H}{Domain}    & Property
-  \\\hline%                  & &                                         &     &                             &                 &                       &
-    \opLT\brs{\fg(x-\alpha)} &=& e^{-\alpha s}         \opLT\brs{\fg(x)} & for & \Real(s)                    & \in\intcc{A}{B} & \forall x,\alpha\in\C & (\ope{translation})
-  \\\opLT\brs{\fg(\alpha x)} &=& \frac{1}{\abs{\alpha}}\opLT\brs{\fg(x)} & for & \Real\brp{\frac{s}{\alpha}} & \in\intcc{A}{B} & \forall x,\alpha\in\C & (\ope{dilation})
+    \mc{3}{H}{Mapping}                                                                         & \mc{3}{|H}{Region of Convergence}                   & \mc{1}{|H}{Domain}    & Property
+  \\\hline%                  & &                                                               &     &                             &                 &                       &
+    \opLT\brs{\fg(x-\alpha)} &=& e^{-\alpha s}         \opLT\brs{\fg(x)}\brp{s}                & for & \Real(s)                    & \in\intcc{A}{B} & \forall x,\alpha\in\C & (\ope{translation})
+  \\\opLT\brs{\fg(\alpha x)} &=& \frac{1}{\abs{\alpha}}\opLT\brs{\fg(x)}\brp{\frac{s}{\alpha}} & for & \Real\brp{\frac{s}{\alpha}} & \in\intcc{A}{B} & \forall x,\alpha\in\C & (\ope{dilation})
 \end{array}}
 \end{theorem}
 \begin{proof}
@@ -237,10 +237,8 @@ is the \structe{Region of Convergence} of $\opLT\brs{\fg_n(x)}$.
 \label{thm:opLT_mod}
 %--------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
-Let $\fG(s)\eqd \brs{\opLT\fg(x)}$
-and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
-Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
-and the \structe{Region of Convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
+Let $\fG(s)\eqd \brs{\opLT\fg(x)}$.
+Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
 \thmbox{\begin{array}{>{\ds}lc>{\ds}l                   Dl                                                         C                       D}
     \mc{3}{H}{Mapping}                                & \mc{2}{|H}{Region of Convergence}                        & \mc{1}{|H}{Domain}    & \mc{1}{|H}{Property}\\\hline
     \opLT\brs{e^{-\alpha x} \fg(x)} &=& \fG(s+\alpha) & for & A-\Real(\alpha) \leq \Real(s) \leq B-\Real(\alpha) & \forall x,\alpha\in\C & (\ope{modulation})
@@ -269,82 +267,120 @@ and the \structe{Region of Convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 Let $\fG(s)\eqd \brs{\opLT\fg(x)}$
 Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
-\corbox{\begin{array}{>{\ds}l@{\hspace{2pt}}c@{\hspace{2pt}}>{\ds}r                                                        Dl@{\hspace{2pt}}l                  C                    D}
-    \mc{3}{H}{Mapping}                                                                                    & \mc{3}{|H}{Region of Convergence} & \mc{1}{|H}{Domain} & \mc{1}{|H}{Property}\\\hline
-    \opLT\brs{\cos \brp{\omega_o x} \fg(x)} &=&  \frac{1}{2}\fG(s-i\omega_o) + \frac{1}{2}\fG(s+i\omega_o) & for & \Real(s) & \in\intcc{A}{B}  & \forall x\in\C     & (\ope{cosine modulation})\\[2ex]
-    \opLT\brs{\sin \brp{\omega_o x} \fg(x)} &=& -\frac{i}{2}\fG(s-i\omega_o) + \frac{i}{2}\fG(s+i\omega_o) & for & \Real(s) & \in\intcc{A}{B}  & \forall x\in\C     & (\ope{sine modulation})  \\[2ex]
-    \opLT\brs{\cosh\brp{\omega_o x} \fg(x)} &=&  \frac{1}{2}\fG(s- \omega_o) + \frac{1}{2}\fG(s+ \omega_o) & for & \Real(s) & \in\intcc{A}{B}  & \forall x\in\C     & (\ope{cosine modulation})\\[2ex]
-    \opLT\brs{\sinh\brp{\omega_o x} \fg(x)} &=&  \frac{1}{2}\fG(s- \omega_o) - \frac{1}{2}\fG(s+ \omega_o) & for & \Real(s) & \in\intcc{A}{B}  & \forall x\in\C     & (\ope{cosine modulation})
+\corbox{\begin{array}{>{\ds}l@{\hspace{2pt}}c@{\hspace{2pt}}>{\ds}r                                          Dl@{\hspace{2pt}}l                                                              C                    } %D
+    \mc{3}{H}{Mapping}                                                                                     & \mc{3}{|H}{Region of Convergence}                                             & \mc{1}{|H}{Domain} \\\hline %& \mc{1}{|H}{Property}     \\\hline
+    \opLT\brs{\cos \brp{\omega_o x} \fg(x)} &=&  \frac{1}{2}\fG(s-i\omega_o) + \frac{1}{2}\fG(s+i\omega_o) & for & \Real(s) & \in\intcc{A}{B}                                              & \forall x\omega_o\in\C     \\[2ex]  %& (\ope{cosine modulation})\\[2ex]
+    \opLT\brs{\sin \brp{\omega_o x} \fg(x)} &=& -\frac{i}{2}\fG(s-i\omega_o) + \frac{i}{2}\fG(s+i\omega_o) & for & \Real(s) & \in\intcc{A}{B}                                              & \forall x\omega_o\in\C     \\[2ex]  %& (\ope{sine modulation})  \\[2ex]
+    \opLT\brs{\cosh\brp{\omega_o x} \fg(x)} &=&  \frac{1}{2}\fG(s- \omega_o) + \frac{1}{2}\fG(s+ \omega_o) & for & \Real(s) & \in\intcc{A+\abs{\Real(\omega_o)}}{B-\abs{\Real(\omega_o)}}  & \forall x\omega_o\in\C     \\[2ex]  %& (\ope{cosh modulation})  \\[2ex]
+    \opLT\brs{\sinh\brp{\omega_o x} \fg(x)} &=&  \frac{1}{2}\fG(s- \omega_o) - \frac{1}{2}\fG(s+ \omega_o) & for & \Real(s) & \in\intcc{A+\abs{\Real(\omega_o)}}{B-\abs{\Real(\omega_o)}}  & \forall x\omega_o\in\C              %& (\ope{sinh modulation})
 \end{array}}
 \end{corollary}
 \begin{proof}
-\begin{align*}
-  &\opLT\brs{\cosh\brp{\omega_o x} \fg(x)}
-  \\&=\mathrlap{
-       \opLT\brs{\brp{\frac{e^{\omega_o x} + e^{-\omega_o x}}{2}} \fg(x)}
-        \quad\forall \Real(s)\in\intcc{A-\Real(-\omega_o)}{B-\Real(\omega_o)}
-        \quad\text{by definition of $\cosh(x)$ \xref{def:cosh}}
-        }
-  \\&=     \frac{1}{2}\opLT\brs{e^{ \omega_o x} \fg(x)}(s)
+\begin{enumerate}
+  \item Mappings:
+    \begin{align*}
+      &\opLT\brs{\cosh\brp{\omega_o x} \fg(x)}
+      \\&= \opLT\brs{\brp{\frac{e^{\omega_o x} + e^{-\omega_o x}}{2}} \fg(x)}
+        && \text{by definition of $\cosh(x)$}
+        && \text{\xref{def:cosh}}
+      \\&= \frac{1}{2}\opLT\brs{e^{ \omega_o x} \fg(x)}(s)
          + \frac{1}{2}\opLT\brs{e^{-\omega_o x} \fg(x)}(s)
-        && \forall \Real(s)\in\intcc{A-0}{B-0}
         && \text{by \prope{additive} property}
         && \text{\xref{thm:opLT_linear}}
-  \\&=     \frac{1}{2}\opLT\brs{\fg(x)}(s-\omega)
-         + \frac{1}{2}\opLT\brs{\fg(x)}(s+\omega)
-        && \forall \Real(s)\in\intcc{A}{B}
+      \\&=     \frac{1}{2}\opLT\brs{\fg(x)}(s-\omega)
+             + \frac{1}{2}\opLT\brs{\fg(x)}(s+\omega)
         && \text{by \prope{modulation} prop.}
         && \text{\xref{thm:opLT_mod}}
-  \\&=   \frac{1}{2}\fG(s-\omega_o) + \frac{1}{2}\fG(s+\omega_o)
-        && \forall \Real(s)\in\intcc{A}{B}
+      \\&=   \frac{1}{2}\fG(s-\omega_o) + \frac{1}{2}\fG(s+\omega_o)
         && \text{by definition of $\fG(s)$}
         &&
-  \\
-  \\
-  &\opLT\brs{\sinh\brp{\omega_o x} \fg(x)}
-  \\&=\mathrlap{
-       \opLT\brs{\brp{\frac{e^{\omega_o x} - e^{-\omega_o x}}{2}} \fg(x)}
-        \quad\forall \Real(s)\in\intcc{A-\Real(-\omega_o)}{B-\Real(\omega_o)}
-        \quad\text{by definition of $\sinh(x)$ \xref{def:sinh}}
-        }
-  \\&=     \frac{1}{2}\opLT\brs{e^{ \omega_o x} \fg(x)}(s)
-         - \frac{1}{2}\opLT\brs{e^{-\omega_o x} \fg(x)}(s)
-        && \forall \Real(s)\in\intcc{A-0}{B-0}
+      \\
+      \\
+      &\opLT\brs{\sinh\brp{\omega_o x} \fg(x)}
+      \\&= \opLT\brs{\brp{\frac{e^{\omega_o x} - e^{-\omega_o x}}{2}} \fg(x)}
+        && \text{by definition of $\sinh(x)$}
+        && \text{\xref{def:sinh}}
+      \\&=     \frac{1}{2}\opLT\brs{e^{ \omega_o x} \fg(x)}(s)
+             - \frac{1}{2}\opLT\brs{e^{-\omega_o x} \fg(x)}(s)
         && \text{by \prope{additive} property}
         && \text{\xref{thm:opLT_linear}}
-  \\&=     \frac{1}{2}\opLT\brs{\fg(x)}(s-\omega)
-         - \frac{1}{2}\opLT\brs{\fg(x)}(s+\omega)
-        && \forall \Real(s)\in\intcc{A}{B}
+      \\&=     \frac{1}{2}\opLT\brs{\fg(x)}(s-\omega)
+             - \frac{1}{2}\opLT\brs{\fg(x)}(s+\omega)
         && \text{by \prope{modulation} prop.}
         && \text{\xref{thm:opLT_mod}}
-  \\&=   \frac{1}{2}\fG(s-\omega_o) - \frac{1}{2}\fG(s+\omega_o)
-        && \forall \Real(s)\in\intcc{A}{B}
+      \\&=   \frac{1}{2}\fG(s-\omega_o) - \frac{1}{2}\fG(s+\omega_o)
         && \text{by definition of $\fG(s)$}
         &&
-\end{align*}
+      \\
+      \\
+      \opLT\brs{\cos\brp{\omega_o x} \fg(x)}
+        &= \opLT\brs{\cosh\brp{i\omega_o x} \fg(x)}
+       %&& 
+        && \text{by \prefp{thm:cosh}}
+      \\&=  \frac{1}{2}\fG(s-i\omega_o) + \frac{1}{2}\fG(s+i\omega_o)
+        && \text{by $\opLT\brs{\cos(\omega_o x)\fg(x)}$ result}
+      \\
+      \\
+      \opLT\brs{\sin\brp{\omega_o x} \fg(x)}
+        &= \opLT\brs{-i^2\sin\brp{\omega_o x} \fg(x)}
+      \\&= -i\opLT\brs{i\sin\brp{\omega_o x} \fg(x)}
+        && \text{by \prope{homogeneous} property}
+        && \text{\xref{thm:opLT_linear}}
+      \\&= -i\opLT\brs{\sinh\brp{i\omega_o x} \fg(x)}
+       %&&
+        && \text{by \prefp{thm:sinh}}
+      \\&=  -\frac{i}{2}\fG(s-i\omega_o) + \frac{i}{2}\fG(s+i\omega_o)
+        && \text{by $\opLT\brs{\sin(\omega_o x)\fg(x)}$ result}
+    \end{align*}
 
-\begin{align*}
-  \opLT\brs{\cos\brp{\omega_o x} \fg(x)}
-    &= \opLT\brs{\cosh\brp{i\omega_o x} \fg(x)}
-    && 
-    && \text{by \prefp{thm:cosh}}
-  \\&=  \frac{1}{2}\fG(s-i\omega_o) + \frac{1}{2}\fG(s+i\omega_o)
-    && \forall \Real(s)\in\intcc{A}{B}
-    && \text{by $\opLT\brs{\cos(\omega_o x)\fg(x)}$ result}
-  \\
-  \\
-  \opLT\brs{\sin\brp{\omega_o x} \fg(x)}
-    &= \opLT\brs{-i^2\sin\brp{\omega_o x} \fg(x)}
-  \\&= -i\opLT\brs{i\sin\brp{\omega_o x} \fg(x)}
-    && \text{by \prope{homogeneous} property}
-    && \text{\xref{thm:opLT_linear}}
-  \\&= -i\opLT\brs{\sinh\brp{i\omega_o x} \fg(x)}
-    &&
-    && \text{by \prefp{thm:sinh}}
-  \\&=  -\frac{i}{2}\fG(s-i\omega_o) + \frac{i}{2}\fG(s+i\omega_o)
-    && \forall \Real(s)\in\intcc{A}{B}
-    && \text{by $\opLT\brs{\sin(\omega_o x)\fg(x)}$ result}
-\end{align*}
+  \item Region of Convergence of $\opLT\brs{\cos\brp{\omega_o x} \fg(x)}$ and $\opLT\brs{\sin\brp{\omega_o x} \fg(x)}$:
+    {\begin{align*}
+      \opROC\opLT\brs{\cos \brp{\omega_o x} \fg(x)}
+        &= \opROC\opLT\brs{\brp{\frac{e^{ i\omega_o x} 
+                                  \pm e^{-i\omega_o x}}{2}} \fg(x)}
+        &&  \text{by \thme{Euler's Identity}}
+        &&  \text{\xref{thm:eid}}
+      \\&= \opROC\brp{\opLT\brs{\frac{e^{ i\omega_o x}}{2} \fg(x)}
+                  \pm \opLT\brs{\frac{e^{-i\omega_o x}}{2} \fg(x)}}
+        &&  \text{by \prope{linear} prop.}
+        &&  \text{\xref{thm:opLT_linear}}
+      \\&= \opROC\opLT\brs{\brp{\frac{e^{-i\omega_o x}}{2}} \fg(x)} \seti
+           \opROC\opLT\brs{\brp{\frac{e^{ i\omega_o x}}{2}} \fg(x)}
+      \\&= \mathrlap{
+           \intcc{A-\Real( i\omega)}{B-\Real( i\omega)} \seti
+           \intcc{A-\Real(-i\omega)}{B-\Real(-i\omega)}
+           }
+      \\&= \intcc{A-0}{B-0} \seti
+           \intcc{A-0}{B-0}
+      \\&= \intcc{A}{B}
+    \end{align*}}
+
+  \item Region of Convergence of $\opLT\brs{\cosh\brp{\omega_o x} \fg(x)}$ and $\opLT\brs{\sinh\brp{\omega_o x} \fg(x)}$:
+    {\begin{align*}
+      \opROC\opLT\brs{\cos \brp{\omega_o x} \fg(x)}
+        &= \opROC\opLT\brs{\brp{\frac{e^{ \omega_o x} 
+                                  \pm e^{-\omega_o x}}{2}} \fg(x)}
+        &&  \text{by def. $\cosh(x)$, $\sinh(x)$}
+        &&  \text{\xref{def:cosh}}
+      \\&= \opROC\brp{\opLT\brs{\frac{e^{ \omega_o x}}{2} \fg(x)}
+                  \pm \opLT\brs{\frac{e^{-\omega_o x}}{2} \fg(x)}}
+        &&  \text{by \prope{linear} properties}
+        &&  \text{\xref{thm:opLT_linear}}
+      \\&= \opROC\opLT\brs{\brp{\frac{e^{-\omega_o x}}{2}} \fg(x)} \seti
+           \opROC\opLT\brs{\brp{\frac{e^{ \omega_o x}}{2}} \fg(x)}
+      \\&= \mathrlap{
+           \intcc{A-\Real( \omega_o)}{B-\Real( \omega_o)} \seti
+           \intcc{A-\Real(-\omega_o)}{B-\Real(-\omega_o)}
+           }
+      \\&= \brbl{\begin{array}{lM}
+             \intcc{A+\Real( \omega_o)}{B-\Real( \omega_o)} & for $\omega\ge0$\\[2ex]
+             \intcc{A-\Real( \omega_o)}{B+\Real( \omega_o)} & otherwise
+           \end{array}}
+      \\&= \intcc{A+\abs{\Real( \omega_o)}}{B-\abs{\Real( \omega_o)}}
+        && \text{by definition of $\abs{x}$}
+       %&& \text{\xref{def:abs}}
+    \end{align*}}
+\end{enumerate}
 \end{proof}
 
 %=======================================
@@ -415,6 +451,56 @@ and $\step(x)$ the \fncte{unit step} function \xref{def:step}.
    %&& \text{by \ope{reversal} property \xref{cor:opLT_reversal} and \pref{thm:opLT_step}}
     && \text{by (1)}
     && 
+\end{align*}
+\end{proof}
+
+%---------------------------------------
+\begin{corollary}
+\footnote{
+  \citerpcu{vanderpol1959}{22}{Introduction}{https://archive.org/details/in.ernet.dli.2015.141269/page/n31/},
+  \citerpgc{shafii2015}{3}{9780738672458}{Table 1, using One-Sided Laplace Transform},
+  \citerpcu{vanderpol1959}{26}{(8) seems to have an error: $\frac{s}{s+\alpha}$}{https://archive.org/details/in.ernet.dli.2015.141269/page/n35/}
+  }
+\label{cor:opLT_stepexp}
+%---------------------------------------
+Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
+and $\step(x)$ the \fncte{unit step} function.
+\corbox{\begin{array}{>{\ds}lc>{\ds}c     D     l                             C }
+    \mc{3}{H}{Mapping}                  & \mc{2}{|H}{Region of Convergence} & \mc{1}{|H}{Domain}
+    \\\hline
+           \opLT\brs{e^{-\alpha x}\step( x)} &=& \frac{1}{s+\alpha}  & for & \Real(s) \geq-\Real(\alpha) & \forall x\in\R;\,\alpha\in\C
+    \\[2ex]\opLT\brs{e^{-\alpha x}\step(-x)} &=& \frac{1}{s+\alpha}  & for & \Real(s) \leq \Real(\alpha) & \forall x\in\R;\,\alpha\in\C
+\end{array}}
+\end{corollary}
+\begin{proof}
+\begin{align*}
+  \opLT\brs{e^{-\alpha x}\step(x)}(s)
+    &= \opLT\brs{\step(x)}(s+\alpha)
+    &&
+    && \text{by \prope{modulation}}
+    && \text{\xref{thm:opLT_mod}}
+  \\&= \frac{1}{s+\alpha}
+    && \forall\Real(s) \in \intcc{0-\Real(\alpha)}{\infty-\Real(\alpha)}
+    && \text{by \prope{causality}}
+    && \text{\xref{thm:opLT_step}}
+  \\&= \frac{1}{s+\alpha}
+    && \forall\Real(s) \geq -\Real(\alpha)
+    && 
+    && 
+  \\\\
+  \opLT\brs{e^{-\alpha x}\step(-x)}(s)
+    &= \opLT\brs{\step(-x)}(s+\alpha)
+    &&
+    && \text{by \prope{modulation}}
+    && \text{\xref{thm:opLT_mod}}
+  \\&= \frac{-1}{s+\alpha}
+    && \forall\Real(s) \in \intcc{-\infty-\Real(\alpha)}{0-(-\Real(\alpha))}
+    && \text{by \prope{anti-causality}}
+    && \text{\xref{thm:opLT_step}}
+  \\&= \frac{-1}{s+\alpha}
+    && \forall\Real(s) \leq \Real(\alpha)
+    && \text{by \prope{anti-causality}}
+    && \text{\xref{thm:opLT_step}}
 \end{align*}
 \end{proof}
 
@@ -524,51 +610,118 @@ and $\step(x)$ the \fncte{unit step} function.
 %---------------------------------------
 \begin{corollary}
 \footnote{
-  \citerpcu{vanderpol1959}{22}{Introduction}{https://archive.org/details/in.ernet.dli.2015.141269/page/n31/},
-  \citerpgc{shafii2015}{3}{9780738672458}{Table 1, using One-Sided Laplace Transform},
-  \citerpcu{vanderpol1959}{26}{(8) seems to have an error: $\frac{s}{s+\alpha}$}{https://archive.org/details/in.ernet.dli.2015.141269/page/n35/}
+  \citerpgc{shafii2015}{3}{9780738672458}{Table 1, using One-Sided Laplace Transform}
   }
-\label{cor:opLT_stepexp}
+\label{cor:opLT_cosh_step}
 %---------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
-\corbox{\begin{array}{>{\ds}lc>{\ds}c     D     l                             C }
-    \mc{3}{H}{Mapping}                  & \mc{2}{|H}{Region of Convergence} & \mc{1}{|H}{Domain}
-    \\\hline
-           \opLT\brs{e^{-\alpha x}\step( x)} &=& \frac{1}{s+\alpha}  & for & \Real(s) \geq-\Real(\alpha) & \forall x\in\R;\,\alpha\in\C
-    \\[2ex]\opLT\brs{e^{-\alpha x}\step(-x)} &=& \frac{1}{s+\alpha}  & for & \Real(s) \leq \Real(\alpha) & \forall x\in\R;\,\alpha\in\C
+\corbox{\begin{array}{F>{\ds}lc>{\ds}c                                                     D     l                             C@{\hspace{0pt}}}
+    &\mc{3}{H}{Mapping}                                                                  & \mc{2}{|H}{Region of Convergence} & \mc{1}{|H@{\hspace{0pt}}}{Domain}
+  \\\hline
+         (1).& \opLT\brs{\cosh(\omega_o x)\step( x)} &=& \frac{s}{s^2-\omega_o^2}         & for & \Real(s) > \abs{\omega_o} & x,\omega_o\in\R
+  %\\[2ex](2).& \opLT\brs{\sinh(\omega_o x)\step( x)} &=& \frac{\omega_o}{s^2+\omega_o^2}  & for & \Real(s) > 0 & x,\omega_o\in\R
+  %\\[2ex](3).& \opLT\brs{\cosh(\omega_o x)\step(-x)} &=& \frac{-s}{s^2+\omega_o^2}        & for & \Real(s) < 0 & x,\omega_o\in\R
+  %\\[2ex](4).& \opLT\brs{\sinh(\omega_o x)\step(-x)} &=& \frac{-\omega_o}{s^2+\omega_o^2} & for & \Real(s) < 0 & x,\omega_o\in\R
 \end{array}}
 \end{corollary}
 \begin{proof}
 \begin{align*}
-  \opLT\brs{e^{-\alpha x}\step(x)}(s)
-    &= \opLT\brs{\step(x)}(s+\alpha)
+  \opLT\brs{\cosh(\omega_o x)\step(x)}(s)
+    &= \frac{1}{2}\opLT\brs{\step(x)}(s-\omega_o)
+     + \frac{1}{2}\opLT\brs{\step(x)}(s+\omega_o)
     &&
     && \text{by \prope{modulation}}
-    && \text{\xref{thm:opLT_mod}}
-  \\&= \frac{1}{s+\alpha}
-    && \forall\Real(s) \in \intcc{0-\Real(\alpha)}{\infty-\Real(\alpha)}
-    && \text{by \prope{causality}}
+    && \text{\xref{cor:opLT_mod}}
+  \\&= \frac{1}{2}\brs{\frac{1}{s-\omega_o}}
+     + \frac{1}{2}\brs{\frac{1}{s+\omega_o}}
+    && \Real(s) > 0
+    && \text{by \prope{causal} property}
     && \text{\xref{thm:opLT_step}}
-  \\&= \frac{1}{s+\alpha}
-    && \forall\Real(s) \geq -\Real(\alpha)
-    && 
-    && 
-  \\\\
-  \opLT\brs{e^{-\alpha x}\step(-x)}(s)
-    &= \opLT\brs{\step(-x)}(s+\alpha)
-    &&
-    && \text{by \prope{modulation}}
-    && \text{\xref{thm:opLT_mod}}
-  \\&= \frac{-1}{s+\alpha}
-    && \forall\Real(s) \in \intcc{-\infty-\Real(\alpha)}{0-(-\Real(\alpha))}
-    && \text{by \prope{anti-causality}}
-    && \text{\xref{thm:opLT_step}}
-  \\&= \frac{-1}{s+\alpha}
-    && \forall\Real(s) \leq \Real(\alpha)
-    && \text{by \prope{anti-causality}}
-    && \text{\xref{thm:opLT_step}}
+  \\&= \mathrlap{
+       \frac{1}{2}\brs{\frac{1}{s-\omega_o}}\brs{\frac{s+\omega_o}{s+\omega_o}}
+     + \frac{1}{2}\brs{\frac{1}{s+\omega_o}}\brs{\frac{s-\omega_o}{s-\omega_o}}
+     }
+  \\&= \frac{1}{2}\brs{\frac{(s+\omega_o) + (s-\omega_o)}{s^2-\omega_o^2}}
+    && \Real(s) > 0
+  \\&= \frac{s}{s^2-\omega_o^2}
+    && \Real(s) > 0
 \end{align*}
+
+%\begin{align*}
+%  \opLT\brs{\cosh(\omega_o x)\step(x)}(s)
+%    &= \opLT\brs{\cos(i\omega_o x)\step(x)}(s)
+%    && \text{by \prefp{thm:cosh}}
+%  \\&= \frac{1}{\abs{i}}\opLT\brs{\cos(\omega_o x)\step(x)}\brp{\frac{s}{i}}
+%    && \text{by \prope{dilation} property}
+%    && \text{\xref{thm:opLT_dilation}}
+%  \\&= (-i^2)\brs{\frac{1}{1}}\brs{\frac{s/i}{(s/i)^2+\omega_o^2}}
+%    && \Real(s) > 0
+%    && \text{by \pref{cor:opLT_step}}
+%  \\&= -i\brs{\frac{s}{-s^2+\omega_o^2}}
+%    && \Real(s) > 0
+%  \\&= i\brs{\frac{s}{s^2-\omega_o^2}}
+%    && \Real(s) > 0
+%  \\
+%  \opLT\brs{\sin(\omega_o x)\step(x)}(s)
+%    &= -\frac{i}{2}\opLT\brs{\step(x)}(s-i\omega_o)
+%       +\frac{i}{2}\opLT\brs{\step(x)}(s+i\omega_o)
+%    &&
+%    && \text{by \prope{modulation}}
+%    && \text{\xref{cor:opLT_mod}}
+%  \\&= -\frac{i}{2}\brs{\frac{1}{s-i\omega_o}}
+%       +\frac{i}{2}\brs{\frac{1}{s+i\omega_o}}
+%    && \Real(s) > 0
+%    && \text{by \prope{causal} property}
+%    && \text{\xref{thm:opLT_step}}
+%  \\&= \mathrlap{
+%     - \frac{i}{2}\brs{\frac{1}{s-i\omega_o}}\brs{\frac{s+i\omega_o}{s+i\omega_o}}
+%     + \frac{i}{2}\brs{\frac{1}{s+i\omega_o}}\brs{\frac{s-i\omega_o}{s-i\omega_o}}
+%     \qquad\text{(\ope{Rationalizing the Denominator})}
+%     }
+%  \\&= \frac{i}{2}\brs{\frac{-(s+i\omega_o) + (s-i\omega_o)}{s^2+\omega_o^2}}
+%    && \Real(s) > 0
+%  \\&= \frac{\omega_o}{s^2+\omega_o^2}
+%    && \Real(s) > 0
+%\end{align*}
+%
+%\begin{align*}
+%  \opLT\brs{\step(-x)\cos(\omega_o x)}(s)
+%    &= \opLT\brs{\step(-x)\cos(\omega_o(-x))}(s)
+%    &&
+%    && \text{by \prope{even} property of $\cos(x)$}
+%    && \text{\xref{thm:cos-x}}
+%  \\&= \opLT\brs{\step(x)\cos(\omega_o x)}(-s)
+%    &&
+%    && \text{by \prope{reversal} property}
+%    && \text{\xref{cor:opLT_reversal}}
+%  \\&= \frac{(-s)}{(-s)^2+\omega_o^2}
+%    && \Real(s) < 0
+%    && \text{by (1)}
+%    &&
+%  \\&= \frac{-s}{s^2+\omega_o^2}
+%    && \Real(s) < 0
+%  \\
+%  \opLT\brs{\sin(\omega_o x)\step(-x)}(s)
+%    &= \opLT\brs{-\sin(\omega_o(-x))\step(-x)}(s)
+%    &&
+%    && \text{by \prope{odd} property of $\sin(x)$}
+%    && \text{\xref{thm:sin-x}}
+%  \\&= -\opLT\brs{\sin(\omega_o(-x))\step(-x)}(s)
+%    &&
+%    && \text{by \prope{homogeneous} property}
+%    && \text{\xref{thm:opLT_linear}}
+%  \\&= -\opLT\brs{\sin(\omega_o x)\step(x)}(-s)
+%    &&
+%    && \text{by \prope{reversal} property}
+%    && \text{\xref{cor:opLT_reversal}}
+%  \\&= -\brs{\frac{\omega_o}{(-s)^2+\omega_o^2}}
+%    && \Real(s) < 0
+%    && \text{by (2)}
+%    &&
+%  \\&= \frac{-\omega_o}{s^2+\omega_o^2}
+%    && \Real(s) < 0
+%\end{align*}
 \end{proof}
 
 %---------------------------------------
