--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1209,6 +1209,8 @@
 
 \renewcommand{\sin}{\mathfnct{sin}}%
 \renewcommand{\cos}{\mathfnct{cos}}%
+\renewcommand{\sinh}{\mathfnct{sinh}}%
+\renewcommand{\cosh}{\mathfnct{cosh}}%
 
 %--------------------------------------
 % free variables
@@ -1342,6 +1344,7 @@
 \newcommand{\opiDTFT}[0]{\breve{\opXYZ{F}}^{-1}}        % inverse Discrete Time Fourier Transform
 \newcommand{\opDFT} [0]{d\breve{\opXYZ{F}} }            % Discrete Fourier Transform
 
+\newcommand{\opROC} {\opXYZ{R\!o\!c}} % Region of Convergence operator
 \newcommand{\opZT} {\opXYZ{Z}} % z-transform operator
 \newcommand{\opLT} {\opXYZ{L}} % Laplace transform
 \newcommand{\opLTi} [0]{\opXYZ{L}^{-1}} % two-sided inverse Laplace Transform
