--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -47,6 +47,22 @@ Let $\spLLRBu$ be the space of all
   }
 \end{definition}
 
+Such integrals may \prope{converge} for certain values of $s$ and \prope{diverge} for others. 
+%--------------------------------------
+\begin{definition}
+\label{def:roc}
+%--------------------------------------
+Let $\opLT\brs{\fg(x)}$ be the \ope{Laplace Transform} \xref{def:opLT} of a function $\fg(x)$.
+\defboxt{
+  The set $\opROC\opLT\brs{\fg(x)}$ of all $s$ for which $\opLT\brs{\fg(x)}$ \prope{converges}
+  \\is the \structd{Region of Convergence} of $\opLT\brs{\fg(x)}$.
+  }
+\end{definition}
+
+In this text, the region of convergence may in places be specified using 
+the \structe{open interval} $\intoo{A}{B}$ and \structe{closed interval} 
+$\intcc{A}{B}$\ifsxref{convex}{def:intcc}.
+
 %--------------------------------------
 \begin{remark}
 %--------------------------------------
@@ -335,14 +351,14 @@ Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
 
   \item Region of Convergence of $\opLT\brs{\cos\brp{\omega_o x} \fg(x)}$ and $\opLT\brs{\sin\brp{\omega_o x} \fg(x)}$:
     {\begin{align*}
-      \opROC\opLT\brs{\cos \brp{\omega_o x} \fg(x)}
-        &= \opROC\opLT\brs{\brp{\frac{e^{ i\omega_o x} 
+      &\opROC\opLT\brs{\sfrac{\cos}{\sin}\brp{\omega_o x} \fg(x)}
+      \\&= \opROC\opLT\brs{\brp{\frac{e^{ i\omega_o x} 
                                   \pm e^{-i\omega_o x}}{2}} \fg(x)}
         &&  \text{by \thme{Euler's Identity}}
         &&  \text{\xref{thm:eid}}
       \\&= \opROC\brp{\opLT\brs{\frac{e^{ i\omega_o x}}{2} \fg(x)}
                   \pm \opLT\brs{\frac{e^{-i\omega_o x}}{2} \fg(x)}}
-        &&  \text{by \prope{linear} prop.}
+        &&  \text{by \prope{additive} property}
         &&  \text{\xref{thm:opLT_linear}}
       \\&= \opROC\opLT\brs{\brp{\frac{e^{-i\omega_o x}}{2}} \fg(x)} \seti
            \opROC\opLT\brs{\brp{\frac{e^{ i\omega_o x}}{2}} \fg(x)}
@@ -357,14 +373,14 @@ Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
 
   \item Region of Convergence of $\opLT\brs{\cosh\brp{\omega_o x} \fg(x)}$ and $\opLT\brs{\sinh\brp{\omega_o x} \fg(x)}$:
     {\begin{align*}
-      \opROC\opLT\brs{\cos \brp{\omega_o x} \fg(x)}
-        &= \opROC\opLT\brs{\brp{\frac{e^{ \omega_o x} 
+      &\opROC\opLT\brs{\sfrac{\cosh}{\sinh}\brp{\omega_o x} \fg(x)}
+      \\&= \opROC\opLT\brs{\brp{\frac{e^{ \omega_o x} 
                                   \pm e^{-\omega_o x}}{2}} \fg(x)}
         &&  \text{by def. $\cosh(x)$, $\sinh(x)$}
         &&  \text{\xref{def:cosh}}
       \\&= \opROC\brp{\opLT\brs{\frac{e^{ \omega_o x}}{2} \fg(x)}
                   \pm \opLT\brs{\frac{e^{-\omega_o x}}{2} \fg(x)}}
-        &&  \text{by \prope{linear} properties}
+        &&  \text{by \prope{additive} property}
         &&  \text{\xref{thm:opLT_linear}}
       \\&= \opROC\opLT\brs{\brp{\frac{e^{-\omega_o x}}{2}} \fg(x)} \seti
            \opROC\opLT\brs{\brp{\frac{e^{ \omega_o x}}{2}} \fg(x)}
@@ -468,8 +484,8 @@ and $\step(x)$ the \fncte{unit step} function.
 \corbox{\begin{array}{>{\ds}lc>{\ds}c     D     l                             C }
     \mc{3}{H}{Mapping}                  & \mc{2}{|H}{Region of Convergence} & \mc{1}{|H}{Domain}
     \\\hline
-           \opLT\brs{e^{-\alpha x}\step( x)} &=& \frac{1}{s+\alpha}  & for & \Real(s) \geq-\Real(\alpha) & \forall x\in\R;\,\alpha\in\C
-    \\[2ex]\opLT\brs{e^{-\alpha x}\step(-x)} &=& \frac{1}{s+\alpha}  & for & \Real(s) \leq \Real(\alpha) & \forall x\in\R;\,\alpha\in\C
+           \opLT\brs{e^{-\alpha x}\step( x)} &=& \frac{1}{s+\alpha}  & for & \Real(s) >-\Real(\alpha) & \forall x\in\R;\,\alpha\in\C
+    \\[2ex]\opLT\brs{e^{-\alpha x}\step(-x)} &=& \frac{1}{s+\alpha}  & for & \Real(s) < \Real(\alpha) & \forall x\in\R;\,\alpha\in\C
 \end{array}}
 \end{corollary}
 \begin{proof}
@@ -480,11 +496,11 @@ and $\step(x)$ the \fncte{unit step} function.
     && \text{by \prope{modulation}}
     && \text{\xref{thm:opLT_mod}}
   \\&= \frac{1}{s+\alpha}
-    && \forall\Real(s) \in \intcc{0-\Real(\alpha)}{\infty-\Real(\alpha)}
+    && \forall\Real(s) \in \intoo{0-\Real(\alpha)}{\infty-\Real(\alpha)}
     && \text{by \prope{causality}}
     && \text{\xref{thm:opLT_step}}
   \\&= \frac{1}{s+\alpha}
-    && \forall\Real(s) \geq -\Real(\alpha)
+    && \forall\Real(s) > -\Real(\alpha)
     && 
     && 
   \\\\
@@ -494,11 +510,11 @@ and $\step(x)$ the \fncte{unit step} function.
     && \text{by \prope{modulation}}
     && \text{\xref{thm:opLT_mod}}
   \\&= \frac{-1}{s+\alpha}
-    && \forall\Real(s) \in \intcc{-\infty-\Real(\alpha)}{0-(-\Real(\alpha))}
+    && \forall\Real(s) \in \intoo{-\infty-\Real(\alpha)}{0-(-\Real(\alpha))}
     && \text{by \prope{anti-causality}}
     && \text{\xref{thm:opLT_step}}
   \\&= \frac{-1}{s+\alpha}
-    && \forall\Real(s) \leq \Real(\alpha)
+    && \forall\Real(s) < \Real(\alpha)
     && \text{by \prope{anti-causality}}
     && \text{\xref{thm:opLT_step}}
 \end{align*}
@@ -619,34 +635,99 @@ and $\step(x)$ the \fncte{unit step} function.
 \corbox{\begin{array}{F>{\ds}lc>{\ds}c                                                     D     l                             C@{\hspace{0pt}}}
     &\mc{3}{H}{Mapping}                                                                  & \mc{2}{|H}{Region of Convergence} & \mc{1}{|H@{\hspace{0pt}}}{Domain}
   \\\hline
-         (1).& \opLT\brs{\cosh(\omega_o x)\step( x)} &=& \frac{s}{s^2-\omega_o^2}         & for & \Real(s) > \abs{\omega_o} & x,\omega_o\in\R
-  %\\[2ex](2).& \opLT\brs{\sinh(\omega_o x)\step( x)} &=& \frac{\omega_o}{s^2+\omega_o^2}  & for & \Real(s) > 0 & x,\omega_o\in\R
-  %\\[2ex](3).& \opLT\brs{\cosh(\omega_o x)\step(-x)} &=& \frac{-s}{s^2+\omega_o^2}        & for & \Real(s) < 0 & x,\omega_o\in\R
-  %\\[2ex](4).& \opLT\brs{\sinh(\omega_o x)\step(-x)} &=& \frac{-\omega_o}{s^2+\omega_o^2} & for & \Real(s) < 0 & x,\omega_o\in\R
+         (1).& \opLT\brs{\cosh(\omega_o x)\step( x)} &=& \frac{ s}       {s^2-\omega_o^2}  & for & \Real(s) > \abs{\omega_o} & x,\omega_o\in\R
+  \\[2ex](2).& \opLT\brs{\sinh(\omega_o x)\step( x)} &=& \frac{\omega_o} {s^2-\omega_o^2}  & for & \Real(s) > \abs{\omega_o} & x,\omega_o\in\R
+  \\[2ex](3).& \opLT\brs{\sinh(\omega_o x)\step(-x)} &=& \frac{-s}       {s^2-\omega_o^2}  & for & \Real(s) < \abs{\omega_o} & x,\omega_o\in\R
+  \\[2ex](4).& \opLT\brs{\sinh(\omega_o x)\step(-x)} &=& \frac{-\omega_o}{s^2-\omega_o^2}  & for & \Real(s) < \abs{\omega_o} & x,\omega_o\in\R
 \end{array}}
 \end{corollary}
 \begin{proof}
-\begin{align*}
-  \opLT\brs{\cosh(\omega_o x)\step(x)}(s)
-    &= \frac{1}{2}\opLT\brs{\step(x)}(s-\omega_o)
-     + \frac{1}{2}\opLT\brs{\step(x)}(s+\omega_o)
-    &&
-    && \text{by \prope{modulation}}
-    && \text{\xref{cor:opLT_mod}}
-  \\&= \frac{1}{2}\brs{\frac{1}{s-\omega_o}}
-     + \frac{1}{2}\brs{\frac{1}{s+\omega_o}}
-    && \Real(s) > 0
-    && \text{by \prope{causal} property}
-    && \text{\xref{thm:opLT_step}}
-  \\&= \mathrlap{
-       \frac{1}{2}\brs{\frac{1}{s-\omega_o}}\brs{\frac{s+\omega_o}{s+\omega_o}}
-     + \frac{1}{2}\brs{\frac{1}{s+\omega_o}}\brs{\frac{s-\omega_o}{s-\omega_o}}
-     }
-  \\&= \frac{1}{2}\brs{\frac{(s+\omega_o) + (s-\omega_o)}{s^2-\omega_o^2}}
-    && \Real(s) > 0
-  \\&= \frac{s}{s^2-\omega_o^2}
-    && \Real(s) > 0
-\end{align*}
+\begin{enumerate}
+  \item Mappings for $\opLT\brs{\cosh(\omega_o x)\step( x)}$ and $\opLT\brs{\sinh(\omega_o x)\step( x)}$:
+    \begin{align*}
+      \opLT\brs{\cosh(\omega_o x)\step(x)}(s)
+        &= \frac{1}{2}\opLT\brs{\step(x)}(s-\omega_o)
+         + \frac{1}{2}\opLT\brs{\step(x)}(s+\omega_o)
+        && \text{by \prope{modulation}}
+        && \text{\xref{cor:opLT_mod}}
+      \\&= \frac{1}{2}\brs{\frac{1}{s-\omega_o}}
+         + \frac{1}{2}\brs{\frac{1}{s+\omega_o}}
+        && \text{by \prope{causal} property}
+        && \text{\xref{thm:opLT_step}}
+      \\&= \mathrlap{
+           \frac{1}{2}\brs{\frac{1}{s-\omega_o}}\brs{\frac{s+\omega_o}{s+\omega_o}}
+         + \frac{1}{2}\brs{\frac{1}{s+\omega_o}}\brs{\frac{s-\omega_o}{s-\omega_o}}
+         }
+      \\&= \frac{1}{2}\brs{\frac{(s+\omega_o) + (s-\omega_o)}{s^2-\omega_o^2}}
+      \\&= \frac{s}{s^2-\omega_o^2}
+      \\
+      \\
+      \opLT\brs{\sinh(\omega_o x)\step(x)}(s)
+        &= \frac{1}{2}\opLT\brs{\step(x)}(s-\omega_o)
+         - \frac{1}{2}\opLT\brs{\step(x)}(s+\omega_o)
+        && \text{by \prope{modulation}}
+        && \text{\xref{cor:opLT_mod}}
+      \\&= \frac{1}{2}\brs{\frac{1}{s-\omega_o}}
+         - \frac{1}{2}\brs{\frac{1}{s+\omega_o}}
+        && \text{by \prope{causal} property}
+        && \text{\xref{thm:opLT_step}}
+      \\&= \mathrlap{
+           \frac{1}{2}\brs{\frac{1}{s-\omega_o}}\brs{\frac{s+\omega_o}{s+\omega_o}}
+         - \frac{1}{2}\brs{\frac{1}{s+\omega_o}}\brs{\frac{s-\omega_o}{s-\omega_o}}
+         }
+      \\&= \frac{1}{2}\brs{\frac{(s+\omega_o) - (s-\omega_o)}{s^2-\omega_o^2}}
+      \\&= \frac{\omega_o}{s^2-\omega_o^2}
+    \end{align*}
+
+  \item Region of Convergence of $\opLT\brs{\cosh(\omega_o x)\step( x)}$ and 
+        $\opLT\brs{\sinh(\omega_o x)\step( x)}$:
+    \begin{align*}
+      \opROC\opLT\brs{\cosh(\omega_o x)\step( x)}
+        &= \intcc{A+\abs{\Real(\omega_o)}}{B-\abs{\Real(\omega_o)}}
+        && \text{by \prefp{cor:opLT_mod}}
+      \\&= \intoo{0+\abs{\Real(\omega_o)}}{\infty-\abs{\Real(\omega_o)}}
+        && \text{by \prefp{thm:opLT_step}}
+      \\&= \intoo{\abs{\Real(\omega_o)}}{\infty}
+      \\&\implies \opROC\opLT\brs{\cosh(\omega_o x)\step( x)} > \abs{\Real(\omega_o)}
+    \end{align*}
+
+  \item Mappings for $\opLT\brs{\cosh(\omega_o x)\step(-x)}$ and $\opLT\brs{\sinh(\omega_o x)\step(-x)}$:
+    \begin{align*}
+      \opLT\brs{\cosh(\omega_o x)\step(-x)}(s)
+        &= \opLT\brs{\cosh(\omega_o(-x))\step(-x)}(s)
+      \\&= \opLT\brs{\cosh(\omega_o x)\step(x)}(-s)
+        && \text{by \prope{reversal} property}
+        && \text{\xref{cor:opLT_reversal}}
+      \\&= \frac{(-s)}{(-s)^2-\omega_o^2}
+        && \text{by previous result}
+      \\&= \frac{-s}{s^2-\omega_o^2}
+      \\
+      \\
+      \opLT\brs{\sinh(\omega_o x)\step(-x)}(s)
+        &= \opLT\brs{-\sinh(\omega_o(-x))\step(-x)}(s)
+      \\&= -\opLT\brs{\sinh(\omega_o(-x))\step(-x)}(s)
+        && \text{by \prope{homogeneous} property}
+        && \text{\xref{thm:opLT_linear}}
+      \\&= -\opLT\brs{\sinh(\omega_o x)\step(x)}(-s)
+        && \text{by \prope{reversal} property}
+        && \text{\xref{cor:opLT_reversal}}
+      \\&= \frac{-\omega_o}{(-s)^2-\omega_o^2}
+        && \text{by previous result}
+      \\&= \frac{-\omega_o}{s^2-\omega_o^2}
+    \end{align*}
+
+  \item Region of Convergence of $\opLT\brs{\cosh(\omega_o x)\step(-x)}$ and 
+        $\opLT\brs{\sinh(\omega_o x)\step(-x)}$:
+    \begin{align*}
+      \opROC\opLT\brs{\cosh(\omega_o x)\step(-x)}
+        &= \intcc{A+\abs{\Real(\omega_o)}}{B-\abs{\Real(\omega_o)}}
+        && \text{by \prefp{cor:opLT_mod}}
+      \\&= \intoo{-\infty+\abs{\Real(\omega_o)}}{0-\abs{\Real(\omega_o)}}
+        && \text{by \prefp{thm:opLT_step}}
+      \\&= \intoo{-\infty}{\abs{\Real(\omega_o)}}
+      \\&\implies \opROC\opLT\brs{\cosh(\omega_o x)\step(-x)} < \abs{\Real(\omega_o)}
+    \end{align*}
+\end{enumerate}
 
 %\begin{align*}
 %  \opLT\brs{\cosh(\omega_o x)\step(x)}(s)
@@ -862,7 +943,7 @@ Let $A\eqd\Real(\alpha)$.
 \corbox{\begin{array}{>{\ds}lc>{\ds}l                                    D     l                            C }
     \mc{3}{H}{Mapping}                                                 & \mc{2}{|H}{Region of Convergence}& \mc{1}{|H}{Domain}
   \\\hline%                                                            &                                  &
-    \opLT\brs{e^{-\alpha\abs{x}}}  &=& \frac{2\alpha}{\alpha^2 - s^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
+    \opLT\brs{e^{-\alpha\abs{x}}}  &=& \frac{2\alpha}{\alpha^2 - s^2}  & for & \Real(s) \in \intoo{-\alpha}{\alpha} & x,\alpha\in\C
 \end{array}}
 \end{corollary}
 \begin{proof}
